Sidebar now has the scrollable class, so it will exhibit correct behaviour on iOS

--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -39,7 +39,6 @@ $sidebar-width: 212px;
 #filter-bar {
   width: $sidebar-width;
   min-width: $sidebar-width;
-  overflow-y: auto;
   border-right: 1px solid $navbar-default-border;
 
   .filter-group {
